badges ocultados en modo edicion desactivada

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -748,9 +748,7 @@ body.home:not(.editing) {
                 }
             }
             .sectionbadges {
-                position: absolute;
-                right: 1.5rem;
-                top: 1.5rem;
+                display: none !important;
             }
         }
         .content {
