badges borradas en los modulos tambien con edicion desactivada

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1800,6 +1800,9 @@ body:not(.home) {
 /* MODULOS: EXCLUSIVO CON EDICIÓN DESACTIVADA */
 
 body:not(.editing) {
+    .sectionbadges {
+        display: none !important;
+    }
     ul.section {
         li.activity {
             .activityiconcontainer {
