boton calificaciones desaparece con modo de edicion desactivada

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1800,6 +1800,11 @@ body:not(.home) {
 /* MODULOS: EXCLUSIVO CON EDICIÓN DESACTIVADA */
 
 body:not(.editing) {
+    .moremenu {
+        li[data-key="grades"] {
+            display: none;
+        }
+    }
     .sectionbadges {
         display: none !important;
     }
