--- a/public/campus/posgrados/ia/1/styles/course.scss
+++ b/public/campus/posgrados/ia/1/styles/course.scss
@@ -3,7 +3,7 @@
 /* HOJA DE RECURSOS */
 
 
-/* Oculto buscador avanzado - con edición desactivada */
+/* Oculto buscador avanzado y boton añadir entrada - con edición desactivada */
 
 .cmid-2975771:not(.editing) {
     div[role="main"] {
@@ -11,6 +11,13 @@
             display: none;
         }
         .datapreferences {
+            #sticky-footer {
+                .navitem {
+                    a {
+                        display: none;
+                    }
+                }
+            }
             hr {
                 display: none;
             }
