estilos en base de datos duplicadas

--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -41,7 +41,7 @@
 
 /* BASE DE DATOS: ESPACIO DE TRABAJO - CITAR CANCIONES - EMBARQUE */
 
-.cmid-2974749 {
+.cmid-2974749, .cmid-2980020, .cmid-2980021 {
     @include general.bbdd-2col;
 }
 
