bases de datos mixins y boton en tarea

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2475,7 +2475,8 @@ body {
     &#page-mod-url-mod,
     &#page-mod-data-mod,
     &#page-mod-data-field-,
-    &#page-mod-data-view {
+    &#page-mod-data-view,
+    &#page-mod-choice-view {
         h3 {
             font-family: 'Roboto' !important;
         }
