--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2564,6 +2564,45 @@ body {
     }
 }
 
+/* RECURSO LIBRO */
+
+#page-mod-book-view {
+    .book_content {
+        a {
+            text-decoration-style: solid;
+            text-decoration-color: $primary;
+            text-decoration-thickness: .10em;
+            text-underline-offset: .15em;
+            color: $primary;
+            font-family: 'Roboto';
+            font-weight: bold;
+            word-wrap: break-word;
+            &:hover {
+                color: $grey3;
+                text-decoration-color: $grey3;
+            }
+            &:focus {
+                box-shadow: none;
+            }
+        }
+        ul, ol{
+            li{
+                @include body;
+            }
+        }
+        h3{
+            border-bottom: 2px solid $secondary;
+        }
+        h4 {
+            font-family: 'Roboto' !important;    
+            color: $primary !important;
+            font-weight: 500 !important;
+        }
+        h5, h5 span {
+            @include subtitle;
+        }
+    }
+}
 
 /* OPACITY */
 
