boton en consulta

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2475,6 +2475,7 @@ body {
     &#page-mod-url-mod,
     &#page-mod-data-mod,
     &#page-mod-data-field-,
+    &#page-mod-choice-view,
     &#page-mod-data-view {
         h3 {
             font-family: 'Roboto' !important;
