bbdd postit not editing

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -459,7 +459,7 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
 }
 
 @mixin bbdd-postit {
-    #page-mod-data-view.editing {
+    #page-mod-data-view:not(.editing) {
         form#options {
             display: none !important;
         }
