--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -3,38 +3,13 @@
 /* HOJA DE RECURSOS */
 
 
-/* Oculto buscador avanzado y boton añadir entrada - con edición desactivada */
-
-.cmid-2975439:not(.editing) {
-    div[role="main"] {
-        hr {
-            display: none;
-        }
-        .datapreferences {
-            #sticky-footer {
-                .navitem {
-                    a {
-                        display: none;
-                    }
-                }
-            }
-            hr {
-                display: none;
-            }
-            form#options {
-                display: none;
-            }
-        }
-    }
-}
-
-
 /* Le pongo los estilos con mixin */
 
 .cmid-2975439 {
     @include general.hoja-recursos;
 }
 
-.cmid-2975252, .cmid-2975253 {
+.cmid-2975252,
+.cmid-2975253 {
     @include general.bbdd-1col;
 }
