--- a/public/campus/posgrados/ia/1/styles/course.scss
+++ b/public/campus/posgrados/ia/1/styles/course.scss
@@ -3,32 +3,6 @@
 /* HOJA DE RECURSOS */
 
 
-/* Oculto buscador avanzado y boton añadir entrada - con edición desactivada */
-
-.cmid-2975771:not(.editing) {
-    div[role="main"] {
-        hr {
-            display: none;
-        }
-        .datapreferences {
-            #sticky-footer {
-                .navitem {
-                    a {
-                        display: none;
-                    }
-                }
-            }
-            hr {
-                display: none;
-            }
-            form#options {
-                display: none;
-            }
-        }
-    }
-}
-
-
 /* Le pongo los estilos con mixin */
 
 .cmid-2975771 {
@@ -38,6 +12,7 @@
 
 /* BBDD - VALS CON CHATGPT - MODULO I */
 
-.cmid-2978019, .cmid-2980996 {
+.cmid-2978019,
+.cmid-2980996 {
     @include general.bbdd-1col;
 }
