--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -9,6 +9,9 @@
     @include general.hoja-recursos;
 }
 
+
+/* BBDD - AMAD - SESIÓN 1 */
+
 .cmid-2975252,
 .cmid-2975253 {
     @include general.bbdd-1col;
