--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -489,6 +489,34 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
     hr {
         display: none;
     }
+    #data-singleview-content {
+        .pent-post {
+            background: $grey1;
+            padding: 28px;
+            position: relative;
+            margin-bottom: 28px;
+            break-inside: avoid;
+            display: inline-block;
+            vertical-align: top;
+            min-width: 100%;
+        }
+        .pent-tipo {
+            background-color: $grey2;
+            display: inline-block;
+            color: $primary;
+            padding: 4px 13px;
+            text-transform: uppercase;
+            font-size: 11px;
+            font-weight: 600;
+            position: absolute;
+            bottom: 28px;
+            right: 28px;
+        }
+        .pent-texto {
+            font-family: 'Roboto' !important;
+            margin: 28px 0;
+        }
+    }
     #data-listview-content {
         --gutter: 2rem;
         column-count: 2;
@@ -514,10 +542,10 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
             /* @media (max-width: 990px) {
                 padding: 28px 28px 56px 28px;
             } */
-            &:nth-child(3n+1) {
+            &:nth-of-type(3n+1) {
                 background-color: #FBFFD0;
             }
-            &:nth-child(3n+2) {
+            &:nth-of-type(3n+2) {
                 background-color: #F2E5FF;
             }
             .pent-usuario {
@@ -539,7 +567,6 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
                 right: 28px;
             }
             .pent-texto {
-                font-family: 'Roboto Mono' !important;
                 margin-bottom: 28px;
             }
         }
