--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -572,12 +572,12 @@ $p-xxxl: clamp(40px, 5vi + 18px, 80px);
             }
         }
     }
-    /* span.highlight {
+    span.highlight {
         color: inherit !important;
     }
     .alert.alert-success.alert-block.fade.in {
         display: none;
-    } */
+    }
 }
 
 
