arreglo etiqueta a en paginas

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2013,7 +2013,7 @@ body:not(.home) {
                 div[role="main"] {
                     .box.py-3.generalbox.center.clearfix {
                         .no-overflow {
-                            a {
+                            li a {
                                 text-decoration-style: solid;
                                 text-decoration-color: $primary;
                                 text-decoration-thickness: .10em;
