--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -766,7 +766,7 @@ body.home {
                             li.section.current {
                                 background-color: $primary;
                                 &::before {
-                                    display: none !important;
+                                    display: none !important;                                   
                                 }
                                 .course-section-header {
                                     h3.sectionname {
@@ -929,7 +929,7 @@ body.home:not(.editing) {
             }
         }
     }
-    li.section.current {
+    li.section.current {       
         .course-section-header {
             h3.sectionname {
                 a {
@@ -1517,6 +1517,9 @@ body.home:not(.editing) {
                                 }
                             }
                             .course-content {
+                                .current::before{
+                                    border-left: 0;
+                                }
                                 ul.topics {
                                     span.badge.badge-warning {
                                         background-color: $accent;
