padding y margin en h3 de momentos

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1447,6 +1447,8 @@ body.home:not(.editing) {
                                     }
                                     h3 {
                                         margin-bottom: 2rem;
+                                        padding: initial !important;
+                                        margin-top: initial !important;
                                     }
                                 }
                                 .mom-1 {
