--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -57,3 +57,9 @@
 .cmid-2981106 {
     @include general.bbdd-postit;
 }
+
+/* BBDD MI EXPERIENCIA CON LA IA - DIEL */
+
+.cmid-2982976 {
+    @include general.bbdd-1col;
+}
