bbdds varias en gestic DEyNT 22

--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -16,3 +16,15 @@
 .cmid-2975253 {
     @include general.bbdd-1col;
 }
+
+
+/* BBDD - GESTIC */
+
+.cmid-2975452,
+.cmid-2975448,
+.cmid-2975451,
+.cmid-2975450,
+.cmid-2975447,
+.cmid-2975449 {
+    @include general.bbdd-1col;
+}
