--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1989,6 +1989,9 @@ body:not(.home) {
                                             .btn-ia:after {
                                                 background-image: url(../../../base/img/ia-icon.svg);
                                             }
+                                            .btn-participantes:after {
+                                                background-image: url(../../../base/img/participantes-icon.svg);
+                                            }
                                         }
                                         .pent-sesion {
                                             padding-left: 70px;
