background color en textarea campo area de texto bbdd

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2710,6 +2710,19 @@ body {
             font-weight: 500 !important;
         }
     }
+    &#page-mod-data-field- {
+        div[role="main"] {
+            form#editfield {
+                table {
+                    td {
+                        textarea {
+                            background-color: rgb(59, 59, 59) !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 
