--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -68,3 +68,24 @@
 .cmid-2983971 {
     @include general.bbdd-1col;
 }
+
+/* estilos para videos verticales de MD en Modal */
+
+.cmid-2983761 {
+.video-vertical {
+  position: relative;
+  width: 100%;
+  padding-top: 177.78%; /* 16:9 invertido = 9/16 = 0.5625 -> 100 / 0.5625 = 177.78% */
+}
+
+.video-vertical iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+}
+
+
