--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1339,6 +1339,15 @@ body.home:not(.editing) {
     .zoom-meetings .card-body p {
         margin-bottom: 0.5rem;
     }
+    .btn-actividad {
+        border-radius: 500px;
+        text-decoration: none !important;
+        background-color: #152F4E;
+        color: white !important;
+        font-weight: 400 !important;
+        margin: 15px 15px 15px 0;
+        padding: 7px 18px !important;
+    }
     /* solapa derecha */
     #theme_boost-drawers-blocks {
         width: 100%;
