--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -2744,13 +2744,14 @@ body {
             font-weight: 500 !important;
         }
     }
-    &#page-mod-data-field- {
+    &#page-mod-data-field-, &#page-mod-data-field-menu {
         div[role="main"] {
             form#editfield {
                 table {
                     td {
                         textarea {
                             background-color: rgb(59, 59, 59) !important;
+                            color: white;               
                         }
                     }
                 }
