bbdd en diplo IA

--- a/public/campus/posgrados/ia/1/styles/course.scss
+++ b/public/campus/posgrados/ia/1/styles/course.scss
@@ -16,3 +16,9 @@
 .cmid-2980996 {
     @include general.bbdd-1col;
 }
+
+/* Base de datos La EDA en el aula */
+
+.cmid-2984906 {
+    @include general.bbdd-1col;
+}
