--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1516,7 +1516,7 @@ body.home:not(.editing) {
                                     padding: initial !important;
                                     margin-top: initial !important;
                                 }
-                                a:not(.btn.btn-primary) {
+                                a:not(.btn) {
                                     text-decoration: underline;
                                     text-decoration-style: solid;
                                     text-decoration-color: $primary;
