--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1017,7 +1017,7 @@ body.home:not(.editing) {
         line-height: 1.4;
         margin-bottom: 2.4rem !important;
         border: 1px solid $grey2;
-        a {
+        a:not(.btn) {
             text-decoration: underline;
             text-decoration-style: solid;
             text-decoration-color: $primary;
@@ -1046,7 +1046,7 @@ body.home:not(.editing) {
         margin-bottom: 2.4rem !important;
         box-shadow: none !important;
         //line-height: initial;
-        a {
+        a:not(.btn) {
             text-decoration: underline;
             text-decoration-style: solid;
             text-decoration-color: $primary;
